<resources>
    <string name="app_name">FlashTradingMarket</string>
    <string name="sign_in">Sign in</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="welcome_back">Welcome back</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="change_photo">Change photo</string>
    <string name="profile_name">Satria Adhi Pradana</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="history">Trade history</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="help">Help</string>
    <string name="logout">Log out</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="cart">Cart</string>
    <string name="chat">Chat</string>
    <string name="location">Location</string>
    <string name="what_are_you_looking_for">What are you looking for ?</string>
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="brands">Brands</string>
    <string name="quantity">Quantity: %s</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="discount_template">%s \%% off</string>
    <string name="page_one_title_toolbar">Trade by </string>
    <string name="activity_must_implement_listener">Activity must implement listener</string>
    <string name="add_to_favourite">Add to favourite</string>
    <string name="share">Share</string>
    <string name="total_sum"> #%s</string>
    <string name="reviews_count">(%d reviews)</string>
    <string name="price_info">$ %d</string>
    <string name="card_fragment">Card Fragment</string>
    <string name="name">bata</string>
</resources>