<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_item_favourite"
        android:icon="@drawable/ic_favourite"
        android:title="@string/favourite"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_item_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_item_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_item_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="always" />

</menu>