<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/signInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_8dp"
        android:text="@string/sign_in"
        android:textColor="@color/sign_in_dark"
        android:textSize="@dimen/sign_in_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_sing_in_32dp"
        android:layout_marginTop="@dimen/margin_top_sing_in_32dp"
        android:layout_marginEnd="@dimen/margin_sing_in_32dp"
        android:background="@drawable/background_sign_in"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/edit_text_form_grey"
        android:textSize="@dimen/edit_text_info_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_sing_in_32dp"
        android:layout_marginTop="@dimen/margin_top_sing_in_24dp"
        android:layout_marginEnd="@dimen/margin_sing_in_32dp"
        android:background="@drawable/button_sign_in"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white_color"
        android:textSize="@dimen/sign_in_button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/lastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_sing_in_32dp"
        android:layout_marginTop="@dimen/margin_top_sing_in_24dp"
        android:layout_marginEnd="@dimen/margin_sing_in_32dp"
        android:background="@drawable/background_sign_in"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/edit_text_form_grey"
        android:textSize="@dimen/edit_text_info_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_sing_in_32dp"
        android:layout_marginTop="@dimen/margin_top_sing_in_24dp"
        android:layout_marginEnd="@dimen/margin_sing_in_32dp"
        android:background="@drawable/background_sign_in"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/edit_text_form_grey"
        android:textSize="@dimen/edit_text_info_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameEditText" />

    <TextView
        android:id="@+id/already_have_login_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textColor="@color/already_have_acc_light_grey"
        android:textSize="@dimen/already_have_size"
        app:layout_constraintBottom_toBottomOf="@+id/log_in_text_view"
        app:layout_constraintStart_toStartOf="@+id/appCompatButton"
        app:layout_constraintTop_toTopOf="@+id/log_in_text_view" />

    <TextView
        android:id="@+id/log_in_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top_sing_in_16dp"
        android:layout_marginTop="@dimen/margin_top_sing_in_16dp"
        android:text="@string/log_in"
        android:textColor="@color/log_in_deep_blue"
        android:textSize="@dimen/log_in_acc_size"
        app:layout_constraintStart_toEndOf="@+id/already_have_login_text_view"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/googleLogoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_google_logo"
        app:layout_constraintBottom_toBottomOf="@+id/signInGoogleTextView"
        app:layout_constraintEnd_toStartOf="@+id/signInGoogleTextView"
        app:layout_constraintTop_toTopOf="@+id/signInGoogleTextView" />

    <TextView
        android:id="@+id/signInGoogleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_16dp"
        android:text="@string/sign_in_with_google"
        android:textColor="@color/logo_text_sign_in_black"
        android:textSize="@dimen/logo_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_text_view" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appleLogoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_apple_logo"
        app:layout_constraintBottom_toBottomOf="@+id/signInAppleTextView"
        app:layout_constraintEnd_toStartOf="@+id/signInAppleTextView"
        app:layout_constraintStart_toStartOf="@+id/googleLogoImageView"
        app:layout_constraintTop_toTopOf="@+id/signInAppleTextView" />

    <TextView
        android:id="@+id/signInAppleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_sing_in_32dp"
        android:paddingStart="@dimen/padding_16dp"
        android:text="@string/sign_in_with_apple"
        android:textColor="@color/logo_text_sign_in_black"
        android:textSize="@dimen/logo_sign_in"
        app:layout_constraintEnd_toEndOf="@+id/signInGoogleTextView"
        app:layout_constraintStart_toEndOf="@+id/googleLogoImageView"
        app:layout_constraintTop_toBottomOf="@+id/signInGoogleTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>