<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcomeBackTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_8dp"
        android:text="@string/welcome_back"
        android:textColor="@color/authorization_dark"
        android:textSize="@dimen/sign_in_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.247" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_sing_in_32dp"
        android:layout_marginTop="@dimen/margin_top_sing_in_32dp"
        android:layout_marginEnd="@dimen/margin_sing_in_32dp"
        android:background="@drawable/background_auth_form"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/edit_text_form_grey"
        android:textSize="@dimen/edit_text_info_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeBackTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_sing_in_32dp"
        android:layout_marginTop="@dimen/margin_top_sing_in_24dp"
        android:layout_marginEnd="@dimen/margin_sing_in_32dp"
        android:background="@drawable/background_button"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white_color"
        android:textSize="@dimen/sign_in_button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_sing_in_32dp"
        android:layout_marginTop="@dimen/margin_top_sing_in_24dp"
        android:layout_marginEnd="@dimen/margin_sing_in_32dp"
        android:background="@drawable/background_auth_form"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textAlignment="center"
        android:textColor="@color/edit_text_form_grey"
        android:textSize="@dimen/edit_text_info_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>