<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/location"
            android:textSize="@dimen/location_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_4dp"
            android:src="@drawable/ic_down_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/locationTextView"
            app:layout_constraintStart_toEndOf="@+id/locationTextView"
            app:layout_constraintTop_toTopOf="@+id/locationTextView" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            style="@style/TradeSearchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:background="@drawable/background_search"
            app:iconifiedByDefault="false"
            android:layoutDirection="rtl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationTextView"
            app:queryHint="@string/what_are_you_looking_for" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            app:layout_constraintTop_toBottomOf="@+id/searchView">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/phonesImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_phones" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/headphonesImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_headphones" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/gamesImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_games" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/carsImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_cars" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/furnitureImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_furniture" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/kidsImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_kids" />
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/latestTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_32dp"
            android:text="@string/latest"
            android:textColor="@color/latest_title"
            android:textSize="@dimen/latest_title_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

        <TextView
            android:id="@+id/viewAllLatestTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:text="@string/view_all"
            android:textColor="@color/view_all_text"
            android:textSize="@dimen/view_all_size"
            app:layout_constraintBottom_toBottomOf="@+id/latestTitleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/latestTitleTextView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/latestRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/latestTitleTextView"
            tools:listitem="@layout/item_latest_rv"/>

        <TextView
            android:id="@+id/flashTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_32dp"
            android:text="@string/flash_sale"
            android:textColor="@color/latest_title"
            android:textSize="@dimen/latest_title_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/latestRecyclerView" />

        <TextView
            android:id="@+id/viewAllFlashTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:text="@string/view_all"
            android:textColor="@color/view_all_text"
            android:textSize="@dimen/view_all_size"
            app:layout_constraintBottom_toBottomOf="@+id/flashTitleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/flashTitleTextView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/flashSaleRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flashTitleTextView"
            tools:listitem="@layout/item_flash_sale_rv"/>

        <TextView
            android:id="@+id/brandsTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_32dp"
            android:text="@string/brands"
            android:textColor="@color/latest_title"
            android:textSize="@dimen/latest_title_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flashSaleRecyclerView" />

        <TextView
            android:id="@+id/viewAllBrandsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:text="@string/view_all"
            android:textColor="@color/view_all_text"
            android:textSize="@dimen/view_all_size"
            app:layout_constraintBottom_toBottomOf="@+id/brandsTitleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/brandsTitleTextView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/brandsSaleRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brandsTitleTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>